--- a/styles.css
+++ b/styles.css
@@ -8179,3 +8179,56 @@ img.gray-filter {
     color: #fff;
   }
 /* FIN BULTOS LOGISTICA */
+
+.valor-tabla-despacho {
+    color: #388e3c;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-align: center;
+    font-weight: bold;
+    margin: 0 auto;
+}
+
+.remito-tabla-despacho {
+    color: #727272 !important;
+    font-weight: bold;
+}
+
+.seguimiento-contenedor {
+    background: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    color: #1e1e1e;
+    padding: 10px 16px;
+    border: 1px solid rgba(200, 200, 200, 0.4);
+    border-radius: 12px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-align: center;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    transition: transform 0.2s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.seguimiento-contenedor a {
+    text-decoration: none;
+    color: #007aff;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.seguimiento-contenedor a i {
+    font-size: 1.1em;
+}
+
+.seguimiento-contenedor:hover {
+    background: rgba(255, 255, 255, 0.8);
+    transform: scale(1.04);
+    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
+    cursor: pointer;
+}
+
