--- a/styles.css
+++ b/styles.css
@@ -8853,3 +8853,11 @@ mark {
   font-style: italic;
 }
 /* FIN BUSCADOR DE TANDAS */
+
+.transport-info-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 12px;
+    font-size: 1.1rem;
+    line-height: 1.6;
+}
