--- a/styles.css
+++ b/styles.css
@@ -9416,3 +9416,14 @@ i[class^="bi-"] + em {
     background-color: #adb5bd;
     border-radius: 4px;
 }
+
+.conjuntoDeBtnnes {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.conjuntoDeBtnnes > .btn {
+    height: 48px;
+}
